--- a/weatherDresser/weatherDresserApp/templates/weatherDresserApp/index.html
+++ b/weatherDresser/weatherDresserApp/templates/weatherDresserApp/index.html
@@ -6,11 +6,10 @@
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'weatherDresserApp/styles.css' %}">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -45,6 +44,8 @@
             <h1 style="padding-top: 10px; font-size: 70px;"> {{weather.temperature}} </h1>
 
             <h4 style="margin: 0px; font-size: 40px;"> {{weather.feel}} </h4>
+            <h4> {{weather.high}} {{weather.low}}</h4>
+        
         </div>
 
         <div class="middleCard">
